--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   dartz: ^0.10.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
