--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   dartz: ^0.10.1
   equatable: ^2.0.7
+  go_router: ^17.0.1
 
 dev_dependencies:
   flutter_test:
